# DemoTemplate

./: .gitignore  Module5.docx  Техническое задание.docx  тест-кейсы(6 модуль).docx
FastAPITemplate/: .env.template  pyproject.toml
FastAPITemplate/src/certs.template/: jwt-private.pem  jwt-public.pem
FastAPITemplate/src/demoapi/: __init__.py
FastAPITemplate/src/demoapi/auth/: controller.py  schemas.py
FastAPITemplate/src/demoapi/core/: role.py  settings.py
FastAPITemplate/src/demoapi/core/httpx/: __init__.py  setup.py
FastAPITemplate/src/demoapi/core/postgesql/: __init__.py  basecrud.py  setup.py
FastAPITemplate/src/demoapi/core/postgesql/model/: id_mixin.py
FastAPITemplate/src/demoapi/services/: http.py  jwt_service.py
VueTemplate/: index.html  package-lock.json  package.json  vite.config.ts
VueTemplate/public/captcha/: README.txt
VueTemplate/src/: App.tsx  App.vue  main.ts
VueTemplate/src/api/: auth.api.ts  example.api.ts
VueTemplate/src/assets/: README.md
VueTemplate/src/components/: AppNav.vue  CaptchaModal.vue  DataTable.vue  FormModal.vue
VueTemplate/src/css/: main.css
VueTemplate/src/router/: index.ts
VueTemplate/src/services/: auth.store.ts  axios.ts  captcha.ts
VueTemplate/src/views/: HomeView.vue  LoginView.vue  RegisterView.vue  Table1View.vue  Table2View.vue  Table3View.vue
